# satrank

./: .dockerignore  .env.example  .gitignore  .rsync-exclude  CHANGELOG.md  DEPLOY.md  Dockerfile  IMPACT-STATEMENT-FULL.md  IMPACT-STATEMENT.md  INTEGRATION.md  LICENSE  Makefile  OBSERVABILITY-AUDIT.md  OBSERVABILITY-BACKLOG.md  OBSERVABILITY-COVERAGE.md  PHASE-3-REPORT.md  README.md  REPORT-INCENTIVE-DESIGN.md  SCORING-AUDIT.md  SECURITY.md  SESSION-BRIEFING.md  deploy.sh  docker-compose.yml  docker-compose.yml.save  mcp-config.json  mcp-server.json  package-lock.json  package.json  tsconfig.json  tsconfig.tests.json  vitest.config.ts
.github/: dependabot.yml
bench/: aggregate.py  run-all.sh
docs/: DEPLOY.md  MIGRATION-TO-1.0.md  OPERATOR_QUICKSTART.md  PHASE-1-DESIGN.md  PHASE-1-DUAL-WRITE-REPORT.md  PHASE-10-REPORT.md  PHASE-12A-BENCHMARK-REPORT-2026-04-21.md  PHASE-12B-MIGRATION-REPORT-2026-04-21.md  PHASE-14D.3-CUTOVER-CHECKLIST.md  PHASE-3-REPORT.md  PHASE-5-REPORT.md  PHASE-7-REPORT.md  PHASE-9-REPORT.md  README.md  SECURITY-AUDIT-REPORT-2026-04-20.md  env.example.md
examples/: agent-loop.ts
nginx/: satrank.conf
public/: app.js  docs.html  index.html  methodology-live.js  methodology.html  styles.css  swagger-custom.css  swagger-init.js
python-sdk/: .gitignore  CHANGELOG.md  README.md  pyproject.toml
python-sdk/examples/: pricing_comparison.py
python-sdk/satrank/: __init__.py  aggregate.py  api_client.py  bolt11.py  client.py  errors.py  fulfill.py  types.py
python-sdk/satrank/nlp/: __init__.py  parse_intent.py
python-sdk/satrank/wallet/: __init__.py  _nip04.py  lnd.py  lnurl.py  nwc.py
python-sdk/scripts/: checkpoint3-demo.py
python-sdk/tests/: test_aggregate.py  test_api_client.py  test_bolt11.py  test_fulfill.py  test_parse_intent.py  test_smoke.py
python-sdk/tests/wallet/: test_lnd.py  test_lnurl.py  test_nwc.py
scripts/: backfill-stage-posteriors.ts  check-drift.ts  checkScoringHealth.sh  cutover-l402-native.sh  demo.sh  graph_analysis.py  (+18 more)
(+613 files in other folders)
