[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "satrank"
version = "1.0.4"
description = "SatRank SDK for autonomous agents on Bitcoin Lightning. Discover, score, and pay Lightning-native HTTP services."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "SatRank" }]
keywords = ["lightning", "bitcoin", "l402", "autonomous-agents", "nostr"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.27,<1.0",
]

[project.optional-dependencies]
nwc = [
    "websockets>=12,<14",
    "cryptography>=42",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.10",
    "ruff>=0.5",
    "respx>=0.21",
    "cryptography>=42",
]

[project.urls]
Homepage = "https://satrank.dev"
Repository = "https://github.com/proofoftrust21/satrank"

[tool.setuptools.packages.find]
include = ["satrank*"]

[tool.setuptools.package-data]
satrank = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
disallow_untyped_defs = true
no_implicit_optional = true
plugins = []

[[tool.mypy.overrides]]
module = ["tests.*", "websockets.*"]
ignore_missing_imports = true
disallow_untyped_defs = false

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]
ignore = ["E501"]
